# vla-safety

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  action.npy  deploy_ros.py  docker-compose.yml  entrypoint.sh  new_stats_format.json  pyproject.toml  run_pi0_offline.py  run_pi0_server.py
assets/: action.npy  stats.json
configs/: config.yaml
data/: benchmark.py  lerobot_dataset.py  utils.py
dino_wm/: config.py  decoder.py  encoder.py  inference.py  test.py  train.py  visual_world_model.py
latentsafe/: base_policy_avoid.py  ddpg.py  ddpg_safety.py  eval_classifier.py  eval_safety.py  latent_dataset.py  play_episode_classifier.py  play_wm_safety.py  precompute_latents.py  safety_filter.py  train_classifier.py  wm_env.py  (+2 more)
so-101-praxis-environment/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  run_with_state_output.py
so-101-praxis-environment/calibration/robots/so_follower/: follower_arm.json
so-101-praxis-environment/outputs/2026-04-17_15-00-23/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-17_15-34-01/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-17_19-51-49/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-20_19-24-07/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-20_20-27-42/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-20_21-03-35/.hydra/: config.yaml  hydra.yaml  overrides.yaml
so-101-praxis-environment/outputs/2026-04-20_21-12-17/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-20_21-12-30/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_18-04-42/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_18-05-49/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_18-06-29/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_18-13-00/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_18-30-52/.hydra/: hydra.yaml
so-101-praxis-environment/outputs/2026-04-25_20-10-15/.hydra/: hydra.yaml
so-101-praxis-environment/praxis/: __init__.py
so-101-praxis-environment/praxis/devices/: spacemouse.py
so-101-praxis-environment/praxis/models/ur5e/mjcf/: ur5e.xml
so-101-praxis-environment/praxis/robots/: base.py  sim.py  so101real.py  so101sim.py  ur5real.py  ur5sim.py
so-101-praxis-environment/praxis/ros/: __init__.py  robot_node.py  sensor_node.py
so-101-praxis-environment/praxis/ros/config/: config.yaml  sensor_config.yaml
so-101-praxis-environment/praxis/ros/config/robot/: piplup.yaml  rowlet.yaml  so101real.yaml  so101sim.yaml  ur5real.yaml  ur5sim.yaml
so-101-praxis-environment/praxis/ros/config/ros_node/: default.yaml
so-101-praxis-environment/praxis/ros/config/sensor/: anyskin.yaml  digit.yaml  digitL.yaml  digitR.yaml  ftsensor.yaml  gsmini.yaml  gsminiL.yaml  gsminiR.yaml
so-101-praxis-environment/praxis/ros/config/sensor_node/: default.yaml
so-101-praxis-environment/praxis/ros/examples/: BIMANUAL_RECORDING_README.md  anyskin_demo.py  bimanual_recorder.py  ft_sensor_test.py  gsmini_test.py  load_bimanual_recording.py  piplup-teleop.py  piplup_teleop_ee.py  policy_grab_from_rest.py  policy_test_connection.py  random_move.py  restricted_random_move.py  rowlet-teleop.py  rowlet_teleop_ee.py  single_arm_camera_recorder.py  single_arm_camera_recorder_and_classifier.py  single_arm_recorder.py  spacemouse_teleop.py  ur5_oscillate_x.py  webcam.py
so-101-praxis-environment/praxis/ros/scripts/: robot_node_launcher.py  sensor_node_launcher.py
so-101-praxis-environment/praxis/scripts/: config.txt  convert_commands_to_ee_pose.py  launch_bimanual.sh  launch_inference.sh  launch_piplup.sh  launch_rowlet.sh  sensor_startup.py  teleop_piplup.sh  teleop_rowlet.sh
so-101-praxis-environment/praxis/sensing/: FT.py  anyskin.py  base.py  digit.py  gsmini.py
so-101-praxis-environment/praxis_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+150 files in other folders)
