[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-safety"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Core ML
    "torch>=2.2.1",
    "torchvision>=0.21.0",
    "einops>=0.8.0",
    "safetensors>=0.4.3",
    "accelerate>=1.10.0",
    "diffusers>=0.27.2",
    # HuggingFace
    "huggingface-hub[hf-transfer]>=0.34.2",
    "datasets>=4.0.0,<5.0.0",
    # PI0 requires a patched transformers fork:
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi",
    # Data / video
    "av>=15.0.0",
    "torchcodec>=0.1",
    # Utilities
    "packaging>=24.2",
    "termcolor>=2.4.0",
    "wandb>=0.24.0",
    "scipy>=1.10.1",
]

[project.optional-dependencies]
peft = [
    "peft>=0.13.0",
]
server = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=8.1.0",
    "pytest-timeout>=2.4.0",
    "pre-commit>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dino_wm*", "pi0*", "data*", "utils*"]
